[package]
name = "off-chain-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
futures = "0.3.30"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
openssl = { version = "0.10", features = ["vendored"] }
axum-auth = { version = "0.7", default-features = false, features = [
    "auth-bearer",
] }
yup-oauth2 = { version = "8.3.3", features = ["hyper-rustls"] }
reqwest = { version = "0.12.2", features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
webpki-roots = "0.26.1"


[dependencies.hyper-rustls]
features = ["webpki-roots"]

[patch.crates-io]
# release with hyper v1 is not out yet
reqwest = { git = "https://github.com/seanmonstar/reqwest.git", rev = "e3192638518d577759dd89da489175b8f992b12f" }

[[bin]]
name = "icp-off-chain-agent"
path = "src/main.rs"

